--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
 
             
                         <label class="modal-consent">
-                            <input class="modal-checkbox" type="checkbox" name="policy">
-                            <span class="checkbox-icon"></span>
+                            <input class="modal-checkbox" type="checkbox" name="policy" />
+                            <span class="checkbox-icon">
+                                <svg width="16" height="15">
+                                    <use href="./images/symbol.svg#icon-checktwo"></use>
+                                </svg>
+                            </span>
                             <span class="md-cons">Соглашаюсь с рассылкой и принимаю <a class="modal-link-consent" href="#"> Условия
                                     договора</a></span>
                         </label>
